# lecturelog-core

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
deploy/: compose.vps.yml  env.core.example  minio-init.sh
docker/: entrypoint.sh  minio-init.sh
docs/: api-contract.md  openapi.json
docs/deploy/: AGENTS.md
lecturelog/api/: app.py  dependencies.py  error_handlers.py  lifespan.py  routes.py  schemas.py
lecturelog/application/: error_classifier.py  factories.py  pipeline_service.py  progress_plan.py  usage_accumulator.py  worker.py
lecturelog/config/: settings.py
lecturelog/domain/: enums.py  exceptions.py  media_source.py  models.py  ports.py
lecturelog/infrastructure/: srt.py
migrations/: env.py
migrations/versions/: 0001_create_tasks.py  0002_add_usage.py  0003_add_source_key.py  0004_add_error_code.py  0005_add_youtube_cookies.py
prompts/: section_v1.md  slide_match_topics_v1.md  slide_match_v1.md  split_topics_v1.md  video_slides_v1.md
scripts/: cookies.py  export_openapi.py  submit_task.py
tests/integration/: test_api_contract.py  test_api_video_contract.py  test_openapi_contract.py  test_openapi_export.py
tests/support/: fake_storage.py
tests/unit/: test_api_schemas.py  test_config.py  test_cookie_store_port.py  test_cookie_validation.py  test_cookies_script.py  test_delete_task_use_case.py  test_document_slide_provider.py  test_domain_enums.py  test_domain_exceptions.py  test_domain_models.py  test_error_classifier.py  test_error_classifier_cookies.py  (+41 more)
(+30 files in other folders)
