[project]
name = "lecturelog"
version = "1.0.0"
description = "Сервис обработки лекций: медиа + слайды -> структурированный конспект"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.27",
    "groq>=0.13",
    "google-genai>=0.3",
    "pymupdf>=1.24",
    "yt-dlp>=2024.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lecturelog*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
